fix flex-wrapping of member directory

--- a/wp-content/themes/make-community/scss/buddypress.scss
+++ b/wp-content/themes/make-community/scss/buddypress.scss
@@ -156,7 +156,7 @@ div.pagination,
 }
 
 // Let's make all the member directories the same
-.makeco.buddypress #item-body #members-list li.item-entry, .makeco.buddypress #friend-list li.item-entry {
+.makeco.buddypress #members-list li.item-entry, .makeco.buddypress #friend-list li.item-entry {
 	width: 15%;
 	margin-right: 2%;
 	margin-bottom: 2.8%;
